--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
-<title>Chillaid</title>
+<title>Fledge</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
@@ -23,12 +23,12 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="bgded overlay" style="background-image:url('static/images/demo/backgrounds/lp.jpg');">
+<div class="bgded overlay" style="background-image:url('static/images/demo/backgrounds/p5.png');">
   <div id="pageintro" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <article>
-      <h3 class="heading">Social Media</h3>
-      <p>Hashtags are an indispensable unit of the social media platform and are immensely used for brand promotion and social media discussions. 
+      <h3 class="heading">About</h3>
+      <p>Fledge aims to automate hashtag generation for any potential twitter handle, eliminating the need to contemplate about inputting tags every time they Tweet. It aims to classify raw text data into five categories.
       </p>
       
     </article>
@@ -37,53 +37,12 @@ Licence URI: https://www.os-templates.com/template-terms
 </div>
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
+
+
+
+
 <!-- ################################################################################################ -->
-<div class="wrapper row3">
-  <main class="hoc container clear"> 
-    <!-- main body -->
-    <!-- ################################################################################################ -->
-    <section id="introblocks">
-      <ul class="nospace group btmspace-80 elements elements-four">
-        <li class="one_quarter">
-          <article><a href="#"><i class="fab fa-instagram "></i></a>
-            <h6 class="heading">Instagram</h6>
-           
-          </article>
-        </li>
-        <li class="one_quarter">
-          <article><a href="#"><i class="fab fa-twitter"></i></a>
-            <h6 class="heading">Twitter</h6>
-            
-          </article>
-        </li>
-        <li class="one_quarter">
-          <article><a href="#"><i class="fab fa-pinterest"></i></a>
-            <h6 class="heading">Pinterest</h6>
-            
-          </article>
-        </li>
-        <li class="one_quarter">
-          <article><a href="#"><i class="fab fa-facebook"></i></a>
-            <h6 class="heading">Facebook</h6>
-            
-          </article>
-        </li>
-      </ul>
-    </section>
-    <!-- ################################################################################################ -->
-    <section class="group shout">
-      <figure class="one_half first"><img src="static/images/demo/h1.jpg" alt="">
-        <figcaption class="heading"><a href="#">Hashtag Generation</a></figcaption>
-      </figure>
-      <figure class="one_half"><img src="static/images/demo/t4.png " alt="" border=" 1px solid #ddd">
-        <figcaption class="heading"><a href="#">Text Classification</a></figcaption>
-      </figure>
-    </section>
-    <!-- ################################################################################################ -->
-    <!-- / main body -->
-    <div class="clear"></div>
-  </main>
-</div>
+
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
@@ -119,95 +78,8 @@ Licence URI: https://www.os-templates.com/template-terms
 </div>
 
 <!-- ################################################################################################ -->
+
 <!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper row3">
-  <section class="hoc container clear"> 
-    <!-- ################################################################################################ -->
-    <div class="sectiontitle">
-      <p class="nospace font-xs">Rutrum erat nec mollis augue mauris</p>
-      <h6 class="heading font-x2">Ac pede phasellus commodo</h6>
-    </div>
-    <ul class="pr-charts nospace group center">
-      <li class="pr-chart-ctrl" data-animate="false">
-        <div class="pr-chart" data-percent="25"><i></i></div>
-        <p>Porttitor</p>
-      </li>
-      <li class="pr-chart-ctrl" data-animate="false">
-        <div class="pr-chart" data-percent="50"><i></i></div>
-        <p>Condimentum</p>
-      </li>
-      <li class="pr-chart-ctrl" data-animate="false">
-        <div class="pr-chart" data-percent="75"><i></i></div>
-        <p>Sollicitudin</p>
-      </li>
-      <li class="pr-chart-ctrl" data-animate="false">
-        <div class="pr-chart" data-percent="100"><i></i></div>
-        <p>Venenatis</p>
-      </li>
-    </ul>
-    <!-- ################################################################################################ -->
-  </section>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper gradient">
-  <div class="hoc container clear"> 
-    <!-- ################################################################################################ -->
-    <div class="sectiontitle">
-      <p class="nospace font-xs">Purus ut mi sed velit urna ut</p>
-      <h6 class="heading font-x2">Sapien posuere in iaculis</h6>
-    </div>
-    <ul class="nospace group team">
-      <li class="one_third first">
-        <figure><a class="imgover" href="#"><img src="static/images/demo/348x400.png" alt=""></a>
-          <figcaption><strong>A. Doe</strong> <em>Euismod nec hendrerit</em></figcaption>
-        </figure>
-      </li>
-      <li class="one_third">
-        <figure><a class="imgover" href="#"><img src="static/images/demo/348x400.png" alt=""></a>
-          <figcaption><strong>B. Doe</strong> <em>Vel velit aliquam massa</em></figcaption>
-        </figure>
-      </li>
-      <li class="one_third">
-        <figure><a class="imgover" href="#"><img src="static/images/demo/348x400.png" alt=""></a>
-          <figcaption><strong>C. Doe</strong> <em>Vulputate aliquet purus</em></figcaption>
-        </figure>
-      </li>
-    </ul>
-    <!-- ################################################################################################ -->
-  </div>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper coloured">
-  <section id="testimonials" class="hoc container clear"> 
-    <!-- ################################################################################################ -->
-    <div class="sectiontitle">
-      <p class="nospace font-xs">Maecenas ultrices faucibus felis</p>
-      <h6 class="heading font-x2">Nunc lacus nulla luctus duis</h6>
-    </div>
-    <article class="one_half first">
-      <figure class="clear"><img src="static/images/demo/100x100.png" alt="">
-        <figcaption>
-          <h6 class="heading">D. Doe</h6>
-          <em>Adipiscing fusce eu velit</em></figcaption>
-      </figure>
-      <blockquote>Pulvinar tortor quis nisi in hac habitasse platea dictumst donec ac tellus fusce venenatis laoreet elit sed est tortor molestie in consectetuer fringilla suscipit ut odio ut ac.</blockquote>
-    </article>
-    <article class="one_half">
-      <figure class="clear"><img src="static/images/demo/100x100.png" alt="">
-        <figcaption>
-          <h6 class="heading">E. Doe</h6>
-          <em>Mauris erat aliquam leo</em></figcaption>
-      </figure>
-      <blockquote>Orci vitae dolor scelerisque blandit morbi eu dui sed volutpat etiam leo leo bibendum vel dictum sed sollicitudin a mi pellentesque ligula nulla facilisi sed bibendum ornare.</blockquote>
-    </article>
-    <!-- ################################################################################################ -->
-  </section>
-</div>
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
@@ -215,83 +87,41 @@ Licence URI: https://www.os-templates.com/template-terms
   <section class="hoc container clear"> 
     <!-- ################################################################################################ -->
     <div class="sectiontitle">
-      <p class="nospace font-xs">Lorem aenean nunc aenean sagittis</p>
-      <h6 class="heading font-x2">Imperdiet massa maecenas</h6>
+      
+      <h6 class="heading font-x2">Work Flow</h6>
     </div>
     <ul id="latest" class="nospace group">
       <li class="one_third first">
-        <article><a class="imgover" href="#"><img src="static/images/demo/348x261.png" alt=""></a>
+        <article><img src="static/images/demo/d1.png" alt="">
           <ul class="nospace meta clear">
-            <li><i class="fas fa-user"></i> <a href="#">Admin</a></li>
-            <li><i class="fas fa-comments"></i> <a href="#">Comments (3)</a></li>
+            <li>Hashtag Generation : General Usage</li>
           </ul>
-          <div class="excerpt">
-            <time datetime="2045-04-05T08:15+00:00">05 Apr 2045</time>
-            <p class="heading"><a href="#">Quam justo suscipit at blandit at blandit vitae tellus maecenas</a></p>
-          </div>
+          
         </article>
       </li>
       <li class="one_third">
-        <article><a class="imgover" href="#"><img src="static/images/demo/348x261.png" alt=""></a>
-          <ul class="nospace meta clear">
-            <li><i class="fas fa-user"></i> <a href="#">Admin</a></li>
-            <li><i class="fas fa-comments"></i> <a href="#">Comments (6)</a></li>
+        <article><img src="static/images/demo/d2.png" alt="">
+          <ul class="meta clear">
+            <li>Hashtag Generation : Commercial Usage</li>
+            
           </ul>
-          <div class="excerpt">
-            <time datetime="2045-04-04T08:15+00:00">04 Apr 2045</time>
-            <p class="heading"><a href="#">Commodo mauris a semper posuere sem arcu cursus felis non cursus</a></p>
-          </div>
+          
         </article>
       </li>
       <li class="one_third">
-        <article><a class="imgover" href="#"><img src="static/images/demo/348x261.png" alt=""></a>
+        <article><a class="imgover" href="#"><img src="static/images/demo/d3.png" alt="" ></a>
           <ul class="nospace meta clear">
-            <li><i class="fas fa-user"></i> <a href="#">Admin</a></li>
-            <li><i class="fas fa-comments"></i> <a href="#">Comments (10)</a></li>
+            <li>Text Classification and Categorization</li>
+           
           </ul>
-          <div class="excerpt">
-            <time datetime="2045-04-03T08:15+00:00">03 Apr 2045</time>
-            <p class="heading"><a href="#">Enim odio in odio suspendisse commodo suscipit nisi nam tellus</a></p>
-          </div>
+          
         </article>
       </li>
     </ul>
     <!-- ################################################################################################ -->
   </section>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper row2">
-  <section id="ctdetails" class="hoc container clear"> 
-    <!-- ################################################################################################ -->
-    <div class="sectiontitle">
-      <p class="nospace font-xs">Enim eleifend dignissim bibendum</p>
-      <h6 class="heading font-x2">Id tristique id metus nulla</h6>
-    </div>
-    <figure class="one_half first">
-      <ul class="nospace clear">
-        <li class="block clear"><a href="#"><i class="fas fa-phone"></i></a> <span><strong>Give us a call:</strong> +00 (123) 456 7890</span></li>
-        <li class="block clear"><a href="#"><i class="fas fa-envelope"></i></a> <span><strong>Send us a mail:</strong> support@domain.com</span></li>
-        <li class="block clear"><a href="#"><i class="fas fa-map-marker-alt"></i></a> <span><strong>Come visit us:</strong> Directions to <a href="#">our location</a></span></li>
-      </ul>
-    </figure>
-    <article class="one_half">
-      <h6 class="heading">Purus nullam arcu integer</h6>
-      <p class="nospace btmspace-15">Elementum nisi ac volutpat vestibulum enim mi tincidunt eros sed justo magna odio sed lacus ut non ante sit amet est luctus dictum ut dolor ac.</p>
-      <form action="#" method="post">
-        <fieldset>
-          <legend>Newsletter:</legend>
-          <input type="text" value="" placeholder="Name">
-          <input type="text" value="" placeholder="Email">
-          <button type="submit" value="submit">Submit</button>
-        </fieldset>
-      </form>
-    </article>
-    <!-- ################################################################################################ -->
-  </section>
-</div>
-<!-- ################################################################################################ -->
+
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <div class="bgded overlay row4" style="background-image:url('images/demo/backgrounds/lp.jpg');">
@@ -312,23 +142,43 @@ Licence URI: https://www.os-templates.com/template-terms
     <div class="one_third">
       <h6 class="heading">Site Links</h6>
       <ul class="nospace linklist">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Text Categorization</a></li>
-        <li><a href="#">Hashtag Generation</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="{{ url_for('index') }}">Home</a></li>
+        <li><a href="{{ url_for('about') }}">About</a></li>
+        <li><a href="{{ url_for('text') }}">Text Categorization</a></li>
+        <li><a href="{{ url_for('tag') }}">Hashtag Generation</a></li>
+        <li><a href="{{ url_for('contact') }}">Contact</a></li>
       </ul>
     </div>
     <div class="one_third">
       <h6 class="heading">Have a Question ?</h6>
           <ul class="nospace linklist">
                   <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info.HealthDiagnosis.com</span></a></li>
+                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info.Fledge.com</span></a></li>
                 </ul>
     </div>
     <!-- ################################################################################################ -->
   </footer>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
