--- a/templates/template.html
+++ b/templates/template.html
@@ -2,8 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Flask Parent Template</title>
-    
+    <title>Fledge</title>
 
     <link href="static/layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 
