--- a/templates/index.html
+++ b/templates/index.html
@@ -73,10 +73,10 @@ Licence URI: https://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <section class="group shout">
       <figure class="one_half first"><img src="static/images/demo/h1.jpg" alt="">
-        <figcaption class="heading"><a href="#">Hashtag Generation</a></figcaption>
+        <figcaption class="heading"><a href="/tag">Hashtag Generation</a></figcaption>
       </figure>
       <figure class="one_half"><img src="static/images/demo/t4.png " alt="" border=" 1px solid #ddd">
-        <figcaption class="heading"><a href="#">Text Classification</a></figcaption>
+        <figcaption class="heading"><a href="/text">Text Classification</a></figcaption>
       </figure>
     </section>
     <!-- ################################################################################################ -->
@@ -95,7 +95,7 @@ Licence URI: https://www.os-templates.com/template-terms
     </div>
     <ul class="nospace group elements elements-three">
       <li class="one_third">
-        <article><a href="#"><i class="fas fa-hashtag"></i></a>
+        <article><a href="/tag"><i class="fas fa-hashtag"></i></a>
           <h6 class="heading">	Generate hashtags serving general purpose </h6>
           <p>Assists users to use a set of hashtags by processing their images.</p>
         </article>
