--- a/templates/about.html
+++ b/templates/about.html
@@ -109,7 +109,7 @@ Licence URI: https://www.os-templates.com/template-terms
         </article>
       </li>
       <li class="one_third">
-        <article><a class="imgover" href="#"><img src="static/images/demo/d3.png" alt="" ></a>
+        <article><img src="static/images/demo/d3.png" alt="" ></a>
           <ul class="nospace meta clear">
             <li>Text Classification and Categorization</li>
            
